# Quishing-using-deep-learning

./: .gitignore  README.md  REPORT.md  config.yaml  data_utils.py  dataset.py  debug_training.py  main.py  model.py  notebook.ipynb  pyproject.toml  test.py  train.py
notes/: ADDITIONAL_FIXES.md  DATASET_SIZE_FIX.md  EXPLAIN_USE_WANDB.md  FIXES_APPLIED.md  RUN_PROJECT.md  SPLITTING_STRATEGY.md  STEPS_2.2_2.3_2.4_SUMMARY.md  STEP_3_SUMMARY.md  STEP_4_SUMMARY.md  STEP_5_SUMMARY.md  WANDB_API_KEY_SETUP.md  WANDB_SETUP.md
testing/: test_data_splits.py  test_dataset.py  test_model.py  test_train_quick.py
wandb-image/: comparison.md
